<resources>
    <string name="app_name">Ejercicio2_2023_2</string>
    <string name="nombre">Nombre:</string>
    <string name="altura">Altura:</string>
    <string name="anio">Año de nacimiento:</string>
    <string name="genero">Genero:</string>
    <string name="periodoRotacionFij">Periodo de Rotación:</string>
    <string name="textview">TextView</string>
    <string name="periodo_orbital">Periodo orbital:</string>
    <string name="diametro">Diametro:</string>
    <string name="clima">Clima:</string>
    <string name="cantidad_de_habitantes">Cantidad de habitantes:</string>
    <string name="terreno">Terreno:</string>
    <string name="cambio">Cambio</string>
    <string name="planeta">Planeta</string>
    <string name="peliculas">Peliculas</string>
</resources>